--- a/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
@@ -74,7 +74,7 @@
         height: 100px;
         min-height: 100px;
         max-height: 100px;
-        margin: auto 15px auto 15px;
+        margin: 15px;
 
         .animationBackground {
           display: flex;
@@ -111,8 +111,9 @@
         margin-right: 8px;
 
         .textInformationH5 {
+          font-family: $fontCustom2;
           font-weight: 400;
-          font-size: 16px;
+          font-size: 14px;
           color: $color-3;
           text-align: center;
           height: auto;
@@ -130,6 +131,10 @@
         }
       }
     }
+  }
+
+  .box_warn {
+    margin: 8px 0 0 0;
   }
 }
 
@@ -178,7 +183,7 @@
           border: none;
 
           .textInformationH5 {
-            font-size: 14px;
+            font-size: 12px;
             width: 100%;
             margin: 0 auto 8px auto;
             padding: 5px;
