--- a/src/modules/components/[0_grouped_0]-shopkeepers/one-item/One-item.module.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/one-item/One-item.module.scss
@@ -33,7 +33,7 @@ $parameterItem: 64px;
       bottom: 3px;
       font-size: 13px;
       font-weight: 400;
-      color: $color-3;
+      color: $site-color-2;
       font-family: $fontCustom2;
     }
   }
