--- a/src/modules/components/[0_grouped_0]-shopkeepers/villager/Villager.module.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/villager/Villager.module.scss
@@ -10,7 +10,7 @@
     width: 100%;
 
     .styleH4 {
-      color: $color-3;
+      color: $site-color-2;
       font-size: 14px;
       font-weight: 400;
       height: 24px;
@@ -25,11 +25,11 @@
       }
 
       .color {
-        color: $color-8;
+        color: $site-color-8;
       }
 
       .red {
-        color: $color-9;
+        color: $site-color-11;
       }
     }
 
