--- a/src/modules/components/[0_grouped_0]-shopkeepers/preview-component/Preview-component.module.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/preview-component/Preview-component.module.scss
@@ -21,7 +21,7 @@
     //min-height: 212px;
     //max-height: 212px;
     padding: 3px;
-    border: 1px solid $color-22;
+    border: 1px solid $site-color-5;
     border-radius: 4px;
 
     .column_one {
@@ -31,7 +31,7 @@
       height: auto;
       border-width: 1px;
       border-right-style: solid;
-      border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $color-22, $color-22, $color-22, rgba(0, 0, 0, 0)) 1 100%;
+      border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $site-color-5, $site-color-5, $site-color-5, rgba(0, 0, 0, 0)) 1 100%;
 
       .imageWrapperAll {
         width: 204px;
