--- a/src/modules/components/[0_grouped_0]-shopkeepers/mini-component/Minecraft-image.module.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/mini-component/Minecraft-image.module.scss
@@ -9,9 +9,10 @@
 
   .enchant {
     position: absolute !important;
-    top: -10%;
-    left: -10%;
-    right: -10%;
-    bottom: -10%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 2px;
+    opacity: 50%;
   }
 }
