Зачар на щите + фикс зачара на кастом бумаге

--- a/src/modules/components/[0_grouped_0]-shopkeepers/mini-component/Minecraft-shield.module.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/mini-component/Minecraft-shield.module.scss
@@ -25,3 +25,12 @@
     padding-bottom: 2px !important;
   }
 }
+
+.enchant {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 40%;
+}
