--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -20,6 +20,12 @@ $table-parameter: 34;
   flex-direction: column;
   width: 100%;
   height: auto;
+  min-height: 80vh;
+  margin-bottom: 24px;
+  background: $site-color-4;
+  border: 1px solid $site-color-5;
+  border-radius: 8px;
+  padding: 6px 4px 8px 6px;
 
   .searchPlayers {
     display: flex;
@@ -28,11 +34,11 @@ $table-parameter: 34;
     margin: 5px auto;
     line-height: 40px;
     outline: none;
-    background: $color-7;
+    background: $site-color-12;
     border: 0.5px solid $color-22;
     border-radius: 5px;
     transition: all 0.25s ease-in-out;
-    color: $color-8;
+    color: $site-color-8;
     padding-left: 10px;
     padding-right: 10px;
 
@@ -40,7 +46,7 @@ $table-parameter: 34;
     &:focus,
     &:active {
       outline: none;
-      background: $color-21;
+      background: $site-color-1;
     }
   }
 
@@ -53,11 +59,11 @@ $table-parameter: 34;
     line-height: 30px;
     text-align: center;
     outline: none;
-    background: $color-7;
-    border: 0.5px solid $color-22;
+    background: $site-color-12;
+    border: 1px solid $site-color-5;
     border-radius: 8px;
     transition: all 0.25s ease-in-out;
-    color: $color-8;
+    color: $site-color-2;
     cursor: pointer;
     font-size: 14px;
 
@@ -65,7 +71,7 @@ $table-parameter: 34;
     &:focus,
     &:active {
       outline: none;
-      background: $color-21;
+      background: $site-color-1;
     }
   }
 
@@ -86,11 +92,11 @@ $table-parameter: 34;
       line-height: 30px;
       text-align: center;
       outline: none;
-      background: $color-7;
-      border: 0.5px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       transition: all 0.25s ease-in-out;
-      color: $color-8;
+      color: $site-color-2;
       cursor: pointer;
       font-size: 14px;
 
@@ -98,13 +104,13 @@ $table-parameter: 34;
       &:focus,
       &:active {
         outline: none;
-        background: $color-21;
+        background: $site-color-1;
       }
     }
   }
 
   .managerTitleH4 {
-    color: $color-8;
+    color: lighten($site-color-8, 25%);
     width: auto;
     height: 20px;
     line-height: 20px;
@@ -119,13 +125,13 @@ body {
   .modalMain {
     position: absolute;
     z-index: 12001;
-    background: $color-21;
-    border: 0.5px solid $color-22;
+    background: $site-color-4;
+    border: 1px solid $site-color-5;
     border-radius: 5px;
-    top: 45px;
-    left: 45px;
-    right: 45px;
-    bottom: 45px;
+    top: 8px;
+    left: 8px;
+    right: 8px;
+    bottom: 8px;
     width: auto;
     height: auto;
     overflow: auto;
@@ -136,25 +142,25 @@ body {
       right: 4px;
       width: auto;
       max-width: 150px;
-      height: 35px;
+      height: 36px;
       padding: 0 12px;
-      line-height: 35px;
+      line-height: 36px;
       text-align: center;
       outline: none;
-      background: $color-7;
-      border: 1px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       transition: all 0.25s ease-in-out;
-      color: $color-8;
+      color: $site-color-8;
       cursor: pointer;
       font-size: 14px;
-      z-index: 5555555;
+      z-index: 1;
 
       &:hover,
       &:focus,
       &:active {
         outline: none;
-        background: $color-21;
+        background: $site-color-1;
       }
     }
 
@@ -194,11 +200,11 @@ body {
             line-height: 24px;
             text-align: center;
             outline: none;
-            background: $color-7;
-            border: 0.5px solid $color-22;
+            background: $site-color-12;
+            border: 1px solid $color-22;
             border-radius: 3px;
             transition: all 0.25s ease-in-out;
-            color: $color-8;
+            color: $site-color-8;
             cursor: pointer;
             font-size: 14px;
 
@@ -206,7 +212,7 @@ body {
             &:focus,
             &:active {
               outline: none;
-              background: $color-11;
+              background: $site-color-1;
             }
           }
         }
@@ -226,8 +232,8 @@ body {
             max-width: 1645px;
             padding: 5px;
             margin: 5px 5px 5px 0;
-            background: $color-7;
-            border: 1px solid $color-22;
+            background: $site-color-12;
+            border: 1px solid $site-color-5;
             border-radius: 5px;
 
             .textDescriptionParagraph {
@@ -237,7 +243,7 @@ body {
               line-height: 24px;
               font-weight: 400;
               font-size: 16px;
-              color: $color-3;
+              color: $site-color-2;
             }
 
             .lime {
@@ -249,7 +255,7 @@ body {
               font-weight: 400;
               font-size: 16px;
               margin-left: 5px;
-              color: $color-8;
+              color: $site-color-8;
             }
 
             input[type="date"] {
@@ -280,7 +286,7 @@ body {
               border-radius: 3px;
               border: none;
               transition: all 0.35s ease;
-              color: $color-8;
+              color: $site-color-8;
               background: transparent;
 
               &:hover,
@@ -291,12 +297,12 @@ body {
               }
 
               &:hover {
-                color: $color-1;
+                color: $site-color-10;
               }
 
               &:focus {
-                color: $color-1;
-                border: 1px solid $color-22 !important;
+                color: $site-color-10;
+                border: 1px solid $site-color-5 !important;
               }
 
             }
@@ -309,7 +315,7 @@ body {
               line-height: 24px;
               font-weight: 400;
               font-size: 16px;
-              color: $color-1;
+              color: $site-color-10;
               margin-left: auto;
             }
           }
@@ -332,7 +338,7 @@ body {
     bottom: 0;
     position: fixed;
     z-index: 12002;
-    background: $color-11;
-    animation: animationModal 1s both ease;
+    background: lighten($site-color-12, 20%);
+    animation: animationModal 0.35s both ease;
   }
 }
