Улучшение галереи для кабинета, добавил стили на отображение статуса поста, переделал стили, работает кабинет часть на фул экранах

--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -1,47 +1,6 @@
 @import "../../../../Variables";
 
-@keyframes UsersName {
-  0% {
-    opacity: 0;
-    height: 0;
-    width: auto;
-  }
-  100% {
-    opacity: 1;
-    width: auto;
-    height: 29px;
-    line-height: 29px;
-  }
-}
-
-@keyframes UsersIcon {
-  0% {
-    opacity: 0;
-    height: 0;
-    width: 0;
-  }
-  100% {
-    opacity: 1;
-    width: 29px;
-    height: 29px;
-  }
-}
-
-@keyframes Errors {
-  0% {
-    opacity: 0;
-    height: 0;
-    width: auto;
-  }
-  100% {
-    opacity: 1;
-    width: auto;
-    height: 27px;
-    line-height: 27px;
-  }
-}
-
-.containerAddEdit {
+.container_add_edit {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -54,48 +13,47 @@
     width: auto;
     height: auto;
 
-    .postParameters {
+    .post_parameters {
       display: flex;
       width: auto;
       height: 35px;
 
-
-      .buttonCount {
+      .button_count {
         margin: auto 5px auto 0;
         width: auto;
         height: 29px;
+        line-height: 29px;
         min-width: 29px;
         max-width: 29px;
-        padding: 5px;
-        outline: none;
+        padding: 0 6px;
         font-size: 16px;
         border: none;
         border-radius: 3px;
-        color: $color-3;
-        background: $color-21;
+        color: $site-color-2;
+        background: $site-color-12;
         transition: all 0.35s ease;
         cursor: pointer;
 
         &:hover,
         &:active,
         &:focus {
-          outline: none;
-          color: $color-8;
+          color: $site-color-8;
         }
       }
 
-      .countNumber {
+      .count_number {
         height: 35px;
         line-height: 35px;
         font-size: 14px;
         font-family: $fontCustom2;
+        color: $site-color-2;
         font-weight: 400;
         margin: 0 0 0 auto;
         padding: 0 5px;
       }
     }
 
-    .containerPhotos {
+    .container_photos {
       display: flex;
       flex-direction: column;
       overflow: auto;
@@ -118,23 +76,23 @@
     flex-direction: column;
     margin-left: 15px;
 
-    .warmContainer {
+    .warn_container {
       display: flex;
       width: 100%;
       height: auto;
       margin-bottom: 10px;
     }
 
-    .interfaceUserAdd,
-    .interfaceTagAdd {
+    .interface_user_add,
+    .interface_tag_add {
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: flex-start;
       width: 100%;
       height: auto;
-      background: $color-7;
-      border: 1px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       padding: 8px;
 
@@ -143,10 +101,11 @@
         width: 100%;
         height: 32px;
         line-height: 32px;
-        font-size: 16px;
+        font-size: 14px;
         padding-left: 8px;
         font-weight: 400;
         font-family: $fontCustom2;
+        color: $site-color-2;
       }
 
       form {
@@ -159,19 +118,20 @@
           flex-direction: row;
           justify-content: flex-start;
 
-          .usersName {
+          .choice_form {
             margin: 0 3px;
             width: auto;
             height: 27px;
             min-width: 50px;
             max-width: 160px;
-            padding: 5px;
+            padding: 0 5px;
             outline: none;
-            font-size: 14px;
-            border: none;
+            font-size: 13px;
+            font-family: $fontCustom2;
+            border: 1px solid $site-color-5;
             border-radius: 3px;
-            color: $color-8;
-            background: $color-21;
+            color: $site-color-8;
+            background: $site-color-12;
             transition: all 0.35s ease;
 
             &:hover,
@@ -187,10 +147,9 @@
             height: 27px;
             border-radius: 3px;
             font-size: 16px;
-            border: none;
-            outline: none;
-            background: $color-21;
-            color: $color-3;
+            border: 1px solid $site-color-5;
+            background: $site-color-12;
+            color: $site-color-2;
             transition: all 0.35s ease;
             cursor: pointer;
             margin: 0;
@@ -199,31 +158,14 @@
             &:hover,
             &:active,
             &:focus {
-              outline: none;
-              color: $color-8;
+              color: $site-color-8;
             }
-          }
-        }
-
-        .errorWrapper {
-          width: auto;
-          height: auto;
-
-          span {
-            font-size: 14px;
-            font-weight: 400;
-            color: $color-9;
-            opacity: 0;
-            line-height: 27px;
-            margin-left: 5px;
-            transition: all 0.35s ease;
-            animation: Errors 0.85s both ease;
           }
         }
       }
 
-      .usersBlock,
-      .tagsBlock {
+      .users_block,
+      .tags_block {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -236,79 +178,82 @@
           width: 4px;
         }
 
-        .oneName {
+        .one_name {
           display: flex;
           flex-direction: row;
           justify-content: flex-start;
           width: auto;
           height: auto;
-          background: $color-21;
-          border-radius: 8px;
-          padding: 4px;
+          background: $site-color-12;
+          border-radius: 4px;
+          padding: 2px;
           margin: 4px;
 
-          .userViewIcon {
-            width: auto;
-            height: 0;
-            opacity: 0;
+          .user_view_icon {
+            width: 28px;
+            min-width: 28px;
+            max-width: 28px;
+            height: 28px;
+            min-height: 28px;
+            max-height: 28px;
             border: none;
-            border-radius: 5px;
-            margin: 3px;
-            animation: UsersIcon 0.85s both ease;
+            border-radius: 4px;
+            overflow: hidden;
+            margin: 2px 4px;
           }
 
-          .userViewName {
+          .user_view_name {
             width: auto;
-            height: 0;
-            opacity: 0;
+            height: 22px;
+            line-height: 22px;
             border: none;
             border-radius: 5px;
-            line-height: 29px;
-            margin: 3px;
-            animation: UsersName 0.85s both ease;
+            margin: 8px 4px 2px 4px;
+            color: $site-color-2;
+            font-family: $fontCustom2;
+            font-size: 13px;
           }
 
-          .userViewDel {
-            width: 29px;
-            height: 29px;
-            border-radius: 5px;
-            font-size: 16px;
+          .user_view_actions {
+            width: 28px;
+            height: 28px;
+            border-radius: 4px;
+            font-size: 14px;
             border: none;
-            outline: none;
             background: transparent;
-            color: $color-3;
+            color: $site-color-2;
             transition: all 0.35s ease;
             cursor: pointer;
-            margin: 3px 0;
+            margin: 2px 0;
             padding: 0;
             text-align: center;
 
             &:hover,
             &:active,
             &:focus {
-              outline: none;
               color: $color-8;
             }
           }
         }
 
-        .oneTag {
+        .one_tag {
           border-radius: 4px;
-          color: darken($color-3, 50%);
-          background: $color-22;
+          color: darken($site-color-2, 50%);
+          background: lighten($site-color-12, 20%);
           padding: 0 8px;
           margin: 2px 4px;
 
-          .tagViewName {
+          .tag_view_name {
             margin-right: 8px;
-            font-size: 13px;
+            font-size: 12px;
+            font-family: $fontCustom2;
           }
 
-          .tagViewDel {
+          .tag_view_actions {
             font-size: 13px;
             outline: none;
             background: transparent;
-            color: darken($color-3, 40%);
+            color: darken($site-color-2, 50%);
             transition: all 0.35s ease;
             cursor: pointer;
             margin: 3px 0;
@@ -320,36 +265,36 @@
             &:active,
             &:focus {
               outline: none;
-              color: $color-8;
+              color: $site-color-8;
             }
           }
         }
       }
 
-      .tagsBlock {
+      .tags_block {
         max-height: 68px;
       }
     }
 
-    .interfaceTagAdd {
+    .interface_tag_add {
       margin-top: 8px;
     }
 
-    .fillTextBlock {
+    .text_block {
       display: flex;
       flex-direction: column;
       width: 100%;
       height: auto;
-      background: $color-7;
-      border: 1px solid $color-22;
-      border-radius: 5px;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
+      border-radius: 4px;
       padding: 8px;
       margin-top: 8px;
 
-      .titleCheck {
+      .title_check {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
         margin-top: 8px;
 
         &:nth-child(1) {
@@ -359,128 +304,146 @@
 
       .title {
         font-weight: 400;
-        font-size: 16px;
-        color: $color-3;
+        font-size: 14px;
+        color: $site-color-2;
         line-height: 32px;
         height: 32px;
         width: auto;
         font-family: $fontCustom2;
-        position: relative;
         padding-left: 8px;
+      }
 
-        .error {
-          margin-left: auto;
-          font-size: 14px;
-          color: $color-9;
-          opacity: 1;
+      .count {
+        font-weight: 400;
+        font-size: 11px;
+        color: $site-color-2;
+        line-height: 32px;
+        height: 32px;
+        font-family: $fontCustom2;
+        margin-left: auto;
+
+        label,
+        span {
+          font-family: inherit;
+          font-size: inherit;
+          font-weight: inherit;
         }
 
-        .true {
-          margin-left: auto;
-          font-size: 14px;
-          color: $color-3;
+        label {
+          color: $site-color-11 !important;
         }
       }
 
-      .in {
+      .choice_text {
         width: 100%;
         min-width: 100%;
         max-width: 100%;
         line-height: 24px;
         height: auto;
         min-height: 34px;
-        max-height: 140px;
+        max-height: 160px;
         vertical-align: bottom;
         padding: 5px;
         outline: none;
-        font-size: 14px;
-        border: 1px solid $color-22;
+        font-size: 13px;
+        font-family: $fontCustom2;
+        border: 1px solid $site-color-5;
         border-radius: 3px;
-        color: $color-8;
-        background: $color-21;
+        color: $site-color-8;
+        background: $site-color-12;
         transition: all 0.35s ease;
         overflow: auto;
-        resize: none;
+        resize: vertical;
 
         &:hover,
         &:active,
         &:focus {
           outline: none;
         }
+
+        &::-webkit-scrollbar {
+          width: 4px;
+        }
       }
     }
 
-    .wrapperBtn {
+    .wrapper_actions {
       display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      min-width: 320px;
       margin: auto auto 0 auto;
+    }
+  }
+}
 
-      .actions {
-        height: 32px;
-        line-height: 32px;
-        border: none;
-        border-radius: 5px;
-        color: $color-3;
-        padding: 0 24px;
-        outline: none;
-        font-weight: 400;
-        font-size: 14px;
-        cursor: pointer;
-        transition: all 0.35s ease;
-        margin: 0 10px;
-        font-family: $fontCustom2;
-
-        &:active,
-        &:hover,
-        &:focus,
-        &:visited {
-          outline: none;
-          border: none;
-        }
-      }
-
-      .save {
-        background: $color-4;
-
-        &:hover {
-          background: $color-6;
-          color: $color-2;
-        }
-      }
-
-      .delete {
-        background: $color-9;
-
-        &:hover {
-          color: $color-2;
+@media screen and (max-width: 1600px) {
+  .container_add_edit {
+    .right {
+      .text_block {
+        .choice_text {
+          max-height: 150px;
         }
       }
     }
   }
 }
 
-@media screen and (max-width: 1600px) {
-}
-
 @media screen and (max-width: 1400px) {
+  .container_add_edit {
+    .right {
+      .text_block {
+        .choice_text {
+          max-height: 135px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1280px) {
-  .containerAddEdit {
+  .container_add_edit {
+    flex-direction: column;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 4px;
+    }
+
+    .left {
+      .container_photos {
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        overflow: auto;
+        max-width: none;
+        min-width: auto;
+        width: auto;
+      }
+    }
+
     .right {
-      .interfaceUserAdd,
-      .interfaceTagAdd {
-        form {
-          flex-direction: column;
+      margin-right: 8px;
+      margin-left: 0;
 
-          .errorWrapper {
-            height: auto;
-          }
-        }
+      .interface_user_add,
+      .interface_tag_add {
+        height: auto;
 
-        .usersBlock,
-        .tagsBlock {
-          margin-top: 3px;
+        .users_block,
+        .tags_block {
+          max-height: 600px;
         }
+      }
+
+      .text_block {
+        .choice_text {
+          max-height: 180px;
+        }
+      }
+
+      .wrapper_actions {
+        margin: 12px auto 2px auto;
       }
     }
   }
@@ -490,38 +453,11 @@
 }
 
 @media screen and (max-width: 960px) {
-  .containerAddEdit {
-    flex-direction: column;
-
-    .left {
-      .containerPhotos {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        max-width: none;
-
-        .margin {
-          margin: 5px;
-        }
-      }
-    }
+  .container_add_edit {
+    overflow: hidden;
 
     .right {
-      margin: 0;
-
-      .interfaceUserAdd,
-      .interfaceTagAdd {
-        .usersBlock,
-        .tagsBlock {
-          max-height: none;
-          height: auto;
-          margin-top: 5px;
-        }
-      }
-
-      .wrapperBtn {
-        margin: 15px auto 5px auto;
-      }
+      margin-right: 0;
     }
   }
 }
@@ -530,9 +466,37 @@
 }
 
 @media screen and (max-width: 640px) {
+  .container_add_edit {
+    .right {
+      .interface_user_add,
+      .interface_tag_add {
+        form {
+          flex-direction: column;
+
+          .add {
+            margin-bottom: 4px;
+
+            .choice_form {
+              min-width: 0;
+              max-width: none;
+              width: 100%;
+            }
+          }
+        }
+
+        .users_block,
+        .tags_block {
+          margin-top: 4px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
+  .container_add_edit {
+    padding-bottom: 6px;
+  }
 }
 
 @media screen and (max-width: 360px) {
