--- a/src/modules/components/[0_grouped_0]-Profile/gallery/AnalyticsPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/AnalyticsPost.module.scss
@@ -1,6 +1,6 @@
 @import "../../../../Variables";
 
-.analyticsBlock {
+.analytics_block {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -21,7 +21,7 @@
       font-weight: 400;
       font-size: 14px;
       text-align: center;
-      color: $color-3;
+      color: $site-color-2;
       background: transparent;
       cursor: pointer;
       outline: none;
@@ -29,11 +29,11 @@
       margin: 0 auto;
 
       &:hover {
-        color: $color-4;
+        color: $site-color-9;
       }
     }
 
-    .infoPost {
+    .info_post {
       width: 100%;
       height: 36px;
       line-height: 36px;
@@ -54,15 +54,15 @@
     height: auto;
     margin-top: 10px;
 
-    .oneColumn {
+    .one_column {
       display: flex;
       flex-direction: column;
       min-height: fit-content;
       max-height: 664px;
       width: 300px;
       overflow: auto;
-      background: $color-20;
-      border: 1px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       padding: 15px;
       margin: 0 4px 8px 4px;
@@ -78,12 +78,13 @@
         line-height: 24px;
         height: 24px;
         margin-bottom: 10px;
+        color: $site-color-2;
 
         .count {
           font-size: inherit;
           font-weight: inherit;
           font-family: inherit;
-          color: $color-8;
+          color: $site-color-8;
         }
       }
 
@@ -94,7 +95,7 @@
         height: 38px;
         line-height: 38px;
         padding: 5px;
-        background: $color-21;
+        background: $site-color-12;
         border-radius: 5px;
         margin: 4px 0;
 
@@ -102,41 +103,20 @@
           margin-top: 0;
         }
 
-        .userIcon {
+        .users_icon {
           width: 28px;
           height: 28px;
           border-radius: 5px;
         }
 
-        .usersName {
+        .users_name {
           height: 28px;
           line-height: 28px;
           font-size: 14px;
           font-weight: 400;
           font-family: $fontCustom2;
           margin-left: 8px;
-        }
-
-        .linkUsers {
-          font-weight: 400;
-          width: auto;
-          height: 28px;
-          line-height: 28px;
-          color: $color-1;
-          margin: 0 5px 0 auto;
-          outline: none;
-          transition: all 0.35s ease;
-          text-decoration: none;
-
-          &:active,
-          &:visited,
-          &:hover {
-            outline: none;
-          }
-
-          &:hover {
-            color: $color-12;
-          }
+          color: $site-color-2;
         }
       }
     }
@@ -162,7 +142,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  .analyticsBlock {
+  .analytics_block {
     .top {
       .back {
         width: 100%;
