--- a/src/modules/custon-modules/react-image-picker-editor-index.scss
+++ b/src/modules/custon-modules/react-image-picker-editor-index.scss
@@ -20,6 +20,7 @@
     margin: 0 !important;
     padding: 0 !important;
     font-weight: 400 !important;
+    font-family: $fontCustom2 !important;
   }
 
   .curtain {
@@ -41,7 +42,7 @@
 
       .material-icons {
         font-size: 30px;
-        color: $color-3;
+        color: $site-color-2;
         opacity: 0;
       }
     }
@@ -52,7 +53,7 @@
 
       button {
         .material-icons {
-          color: $color-3;
+          color: $site-color-2;
           opacity: .9;
         }
       }
@@ -75,23 +76,23 @@
       border-radius: 16px;
       max-width: 100% !important;
       box-sizing: border-box;
-      border: 1px solid $color-22;
-      background-color: $color-7;
+      border: 1px solid $site-color-5;
+      background-color: $site-color-12;
 
       .image-upload-btn {
-        transition: all .5s ease;
+        transition: all 0.5s ease;
         position: relative;
-        opacity: .85;
+        opacity: 0.85;
         width: 100%;
         height: 100%;
-        color: $color-10;
+        color: $site-color-2;
 
         .material-icons {
           font-size: 50px;
           width: 50px;
           height: 50px;
           line-height: 50px;
-          color: $color-10;
+          color: $site-color-2;
         }
       }
 
@@ -111,9 +112,9 @@
       position: relative;
       max-width: 100% !important;
       border-radius: 4px;
-      border: 1px solid $color-22;
+      border: 1px solid $site-color-5;
       box-sizing: border-box;
-      padding: 2px;
+      //padding: 2px;
 
       .image-caption {
         position: absolute;
@@ -128,7 +129,7 @@
         max-width: 100%;
         -o-object-position: center;
         object-position: center;
-        background: $color-7;
+        background: $site-color-12;
       }
 
       .image-upload-btn {
@@ -137,14 +138,14 @@
         opacity: .85;
         width: 100%;
         height: 100%;
-        color: $color-10;
+        color: $site-color-2;
 
         .material-icons {
           font-size: 50px;
           width: 50px;
           height: 50px;
           line-height: 50px;
-          color: $color-10;
+          color: $site-color-2;
         }
       }
 
@@ -174,22 +175,22 @@
 
       button {
         margin: 4px;
-        color: $color-10;
+        color: $site-color-2;
         transition: all .5s ease;
 
         &:hover {
-          color: $color-8;
+          color: $site-color-8;
           transition: all .25s ease-in;
         }
       }
 
       a {
         margin: 4px;
-        color: $color-10;
+        color: $site-color-2;
         transition: all .5s ease;
 
         &:hover {
-          color: $color-8;
+          color: $site-color-8;
           transition: all .25s ease-in;
         }
       }
@@ -211,7 +212,7 @@
     justify-content: center;
     align-items: center;
     border: none;
-    background-color: inherit;
+    background: transparent;
     border-radius: 50%;
     cursor: pointer;
 
@@ -224,6 +225,7 @@
     font-size: 11px;
     margin-top: 2px !important;
     margin-bottom: 0 !important;
+    font-family: $fontCustom2;
   }
 
   button[disabled] {
@@ -269,13 +271,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: $color-7;
+    background-color: $site-color-4;
     padding: 24px 16px;
-    color: $color-3;
+    color: $site-color-2;
     box-sizing: border-box;
     animation: show 0.5s ease;
-    border-radius: 15px;
-    border: 1px solid $color-22;
+    border-radius: 8px;
+    border: 1px solid $site-color-5;
 
 
     .image-container {
@@ -297,11 +299,11 @@
     }
 
     .material-icons {
-      color: $color-3;
+      color: $site-color-2;
       transition: all 0.35s ease;
 
       &:hover {
-        color: $color-8;
+        color: $site-color-8;
       }
     }
 
@@ -313,15 +315,15 @@
       object-fit: cover;
       -o-object-position: center;
       object-position: center;
-      border-radius: 15px;
-      border: 1px solid $color-22;
-      margin-bottom: 8px;
+      //border-radius: 8px;
+      border: 1px solid $site-color-5;
+      //margin-bottom: 8px;
     }
 
     .control-panel {
-      color: $color-3;
-      background-color: $color-11;
-      border: 1px solid $color-22;
+      color: $site-color-2;
+      background-color: $site-color-12;
+      border: 1px solid $site-color-5;
       margin: 0 16px;
       padding: 16px;
       width: 18rem;
@@ -343,9 +345,10 @@
 
       .item-panel {
         padding: 0;
-        font-size: 14px;
+        font-size: 13px;
         font-weight: 500;
         margin: 6px 0;
+        font-family: $fontCustom2;
       }
     }
   }
@@ -356,7 +359,7 @@
     height: 180px;
     min-height: 64px;
     min-width: 64px;
-    border: 2.5px solid #fafafa;
+    border: 2.5px solid $site-color-2;
     box-sizing: border-box;
     resize: both;
     overflow: auto;
@@ -370,7 +373,7 @@
       cursor: move;
       z-index: 9;
       background-color: transparent;
-      color: $color-3;
+      color: $site-color-2;
       height: 100%;
       display: grid;
       gap: 0;
@@ -383,7 +386,7 @@
       opacity: .8;
 
       .material-icons {
-        color: $color-3;
+        color: $site-color-2;
       }
     }
   }
@@ -402,6 +405,7 @@
 
     label {
       font-size: 12px;
+      font-family: $fontCustom2;
       opacity: .92;
       margin-top: 6px;
       margin-bottom: 6px;
@@ -415,42 +419,44 @@
       border-radius: 4px;
       padding: 2px 8px;
       outline: none;
-      color: $color-8;
-      background-color: $color-7;
-      border: 1px solid $color-22;
+      color: $site-color-8;
+      font-family: $fontCustom2;
+      background-color: $site-color-12;
+      border: 1px solid $site-color-5;
     }
 
     select {
+      font-family: $fontCustom2;
       height: 34px;
       width: 100%;
       box-sizing: border-box;
       border-radius: 4px;
       padding: 2px 8px;
       outline: none;
-      background-color: $color-7;
-      color: $color-8;
-      border: 1px solid $color-22;
+      background-color: $site-color-12;
+      color: $site-color-8;
+      border: 1px solid $site-color-5;
     }
   }
 
   .save-btn {
-    background-color: $color-4;
+    background-color: $site-color-9;
     padding: 0 18px;
     height: 34px;
     box-sizing: border-box;
-    color: $color-3;
+    color: $site-color-2;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.35s ease;
+    font-family: $fontCustom2;
 
     &:active {
       transform: scale(.95);
     }
 
     &:hover {
-      background: $color-6;
-      color: $color-2;
+      color: $site-color-1;
     }
   }
 
@@ -469,7 +475,7 @@
 
     &:hover {
       .material-icons {
-        color: $color-3;
+        color: $site-color-2;
       }
     }
   }
@@ -501,7 +507,8 @@
       text-transform: capitalize;
       cursor: pointer;
       opacity: .7;
-      font-size: inherit;
+      //font-size: inherit;
+      font-family: $fontCustom2;
       border: unset;
       transition: all 0.35s ease;
     }
@@ -588,7 +595,7 @@
   }
 
   .croppr-overlay {
-    background: rgba(0, 0, 0, .5);
+    background: $site-color-12;
     position: absolute;
     top: 0;
     right: 0;
@@ -599,7 +606,7 @@
   }
 
   .croppr-region {
-    border: 1px dashed rgba(0, 0, 0, .5);
+    border: 1px dashed $site-color-12;
     position: absolute;
     z-index: 3;
     cursor: move;
@@ -620,8 +627,8 @@
   }
 
   .croppr-handle {
-    border: 1px solid #ccc;
-    background-color: #fafafa;
+    border: 1px solid $site-color-5;
+    background-color: $site-color-2;
     width: 14px;
     height: 14px;
     position: absolute;
