--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -3,7 +3,7 @@
 @keyframes animationModal {
   0% {
     opacity: 0;
-    width: 0;
+    width: 100%;
     height: 0;
   }
   100% {
@@ -13,7 +13,7 @@
   }
 }
 
-.mainGallery {
+.main_gallery {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -21,7 +21,7 @@
   height: auto;
   margin: 0 auto;
 
-  .mainGalleryTitle {
+  .page_title {
     width: 100%;
     height: 34px;
     line-height: 34px;
@@ -33,11 +33,16 @@
     color: $color-3;
   }
 
-  .wrapper {
+  .box_content {
     display: flex;
     flex-direction: row;
+    border: 1px solid $site-color-5;
+    background: $site-color-4;
+    padding: 8px;
+    border-radius: 8px;
+    margin-bottom: 16px;
 
-    .navigationGallery {
+    .navigation_page {
       display: flex;
       flex-direction: column;
       width: 250px;
@@ -45,15 +50,15 @@
       max-width: 250px;
       height: auto;
       min-height: 550px;
-      max-height: 600px;
-      top: 50px;
+      max-height: 690px;
+      top: 75px;
       position: sticky;
-      border: 1px solid $color-22;
-      background: $color-20;
+      border: 1px solid $site-color-5;
+      background: $site-color-12;
       border-radius: 8px;
       padding: 10px;
 
-      .navigationTitle {
+      .navigation_title {
         font-size: 16px;
         font-family: $fontCustom2;
         font-weight: 400;
@@ -61,46 +66,68 @@
         line-height: 24px;
         width: 100%;
         margin-bottom: 8px;
-        color: $color-3;
+        color: $site-color-2;
         text-align: center;
+      }
+
+      .sort_select {
+        background: $site-color-12;
+        border: 1px solid $site-color-5;
+        border-radius: 4px;
+        color: $site-color-8;
+        padding: 0 4px 0 8px;
+        margin: 8px auto;
+        font-size: 13px;
+        font-family: $fontCustom2;
+        font-weight: 400;
+        height: 26px;
+        width: 100%;
+        outline: none;
+
+        .sort_option {
+          font-size: 12px;
+          font-family: $fontCustom2;
+          font-weight: 400;
+        }
       }
 
       form {
         display: flex;
         flex-direction: row;
 
-        .searchInput {
+        .search_input {
           width: 100%;
           height: 26px;
-          margin: 10px auto;
-          background: $color-7;
+          margin: 8px auto;
+          background: $site-color-12;
           outline: none;
-          border: 1px solid $color-22;
-          border-radius: 5px;
+          border: 1px solid $site-color-5;
+          border-radius: 4px;
           transition: all 0.25s ease-in-out;
-          color: $color-8;
-          padding-left: 10px;
+          color: $site-color-8;
+          padding-left: 8px;
           padding-right: 4px;
-          font-size: 14px;
+          font-size: 13px;
+          font-family: $fontCustom2;
+          font-weight: 400;
 
           &:hover,
           &:focus,
           &:active {
             outline: none;
-            background: $color-21;
+            background: $site-color-1;
           }
         }
 
-        .addSubmit {
-          border: 1px solid $color-22;
+        .add_submit {
+          border: 1px solid $site-color-5;
           width: 26px;
           min-width: 26px;
           height: 26px;
           border-radius: 4px;
           font-size: 14px;
-          outline: none;
-          background: $color-7;
-          color: $color-3;
+          background: $site-color-12;
+          color: $site-color-2;
           transition: all 0.35s ease;
           cursor: pointer;
           margin: auto 0 auto 5px;
@@ -109,35 +136,53 @@
           &:hover,
           &:active,
           &:focus {
-            outline: none;
-            color: $color-8;
+            color: $site-color-8;
           }
         }
       }
 
-      .previewWrapper {
+      .preview_box {
         display: flex;
         flex-direction: column;
+        max-height: 250px;
+        overflow: auto;
+        padding-right: 4px;
 
-        .selectedTag {
+        &::-webkit-scrollbar {
+          width: 4px;
+        }
+
+        .selected_tag {
           display: flex;
           flex-direction: row;
-          margin: 2px 4px;
+          margin: 2px 0;
           border-radius: 4px;
-          background: $color-22;
+          color: darken($site-color-2, 50%);
+          background: lighten($site-color-12, 20%);
           padding: 0 0 0 8px;
 
-          .tagName {
-            font-size: 12px;
-            height: 20px;
-            line-height: 20px;
-            color: darken($color-3, 50%);
+          .image {
+            height: 16px;
+            min-height: 16px;
+            max-height: 16px;
+            width: 16px;
+            min-width: 16px;
+            max-width: 16px;
+            margin: 2px;
+          }
+
+          .name {
+            margin: 2px 4px;
+            font-size: 11px;
+            font-family: $fontCustom2;
+            height: 16px;
+            line-height: 16px;
           }
 
           .actions {
-            margin: 0 0 0 auto;
-            height: 20px;
-            line-height: 20px;
+            margin: 2px 0 2px auto;
+            height: 16px;
+            line-height: 16px;
             width: 20px;
             border: none;
             border-radius: 0;
@@ -154,122 +199,126 @@
         }
       }
     }
-  }
 
-  .galleryList {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    padding: 0 15px;
-
-    .oneContainer {
+    .gallery_list {
       display: flex;
+      flex-wrap: wrap;
       flex-direction: row;
       justify-content: center;
-      align-items: center;
-      position: relative;
-      overflow: hidden;
-      width: 350px;
-      height: 200px;
-      min-height: 200px;
-      max-height: 200px !important;
-      border: none;
+      width: 100%;
+      height: auto;
+      padding: 0 8px;
+      border: 1px solid $site-color-5;
+      background: $site-color-12;
+      margin-left: 8px;
       border-radius: 8px;
-      margin: 15px;
-      transition: all 0.35s ease;
 
-      &:hover {
-        scale: 1.10;
-      }
-
-      .wrapperImage {
-        width: 100%;
-        height: 100%;
+      .one_container {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         position: relative;
+        overflow: hidden;
+        width: 350px;
+        height: 200px;
+        min-height: 200px;
+        max-height: 200px !important;
+        border: none;
+        border-radius: 8px;
+        margin: 15px;
+        transition: all 0.35s ease;
 
-        .imgClass {
-          display: flex;
+        &:hover {
+          scale: 1.10;
+        }
+
+        .wrapper_image {
           width: 100%;
           height: 100%;
-          cursor: pointer;
-          scale: 1.02;
-        }
-      }
-
-      .containerLike {
-        display: flex;
-        flex-direction: row;
-        position: absolute;
-        bottom: 4px;
-        right: 4px;
-        height: 20px;
-
-        .likes {
           display: flex;
           flex-direction: row;
-          width: auto;
-          height: 20px;
-          color: $color-3;
-          transition: all 0.35s ease;
+          justify-content: center;
+          align-items: center;
+          position: relative;
 
-          .like {
-            color: $color-8;
-          }
-
-          .dislike {
-            color: $color-2;
-          }
-
-          .click {
-            border: none;
-            border-radius: 0;
-            outline: none;
-            background: transparent;
+          .img {
+            display: flex;
+            width: 100%;
+            height: 100%;
             cursor: pointer;
-            padding: 0;
-            width: 20px;
-            height: 20px;
-            line-height: 20px;
-            text-align: center;
+            scale: 1.02;
+          }
+        }
 
-            &:hover,
-            &:focus,
-            &:active {
+        .container_like {
+          display: flex;
+          flex-direction: row;
+          position: absolute;
+          bottom: 4px;
+          right: 4px;
+          height: 20px;
+
+          .likes {
+            display: flex;
+            flex-direction: row;
+            width: auto;
+            height: 20px;
+            color: $site-color-2;
+            transition: all 0.35s ease;
+
+            .like {
+              color: $site-color-8;
+            }
+
+            .dislike {
+              color: $site-color-4;
+            }
+
+            .click {
               border: none;
               border-radius: 0;
               outline: none;
               background: transparent;
-            }
+              cursor: pointer;
+              padding: 0;
+              width: 20px;
+              height: 20px;
+              line-height: 20px;
+              text-align: center;
 
-            svg {
-              path {
-                fill: currentColor !important;
+              &:hover,
+              &:focus,
+              &:active {
+                border: none;
+                border-radius: 0;
+                outline: none;
+                background: transparent;
               }
+
+              svg {
+                path {
+                  fill: currentColor !important;
+                }
+              }
+
             }
 
-          }
-
-          .text {
-            width: auto;
-            height: 20px;
-            line-height: 20px;
-            font-weight: 400;
-            font-size: 12px;
-            color: $color-3;
-            padding: 0 3px 0 1px;
+            .text {
+              width: auto;
+              height: 20px;
+              line-height: 20px;
+              font-weight: 400;
+              font-size: 12px;
+              font-family: $fontCustom2;
+              color: $site-color-2;
+              padding: 0 3px 0 1px;
+            }
           }
         }
       }
+
     }
-
-
   }
 }
 
@@ -281,16 +330,16 @@ body {
     bottom: 0;
     position: fixed;
     z-index: 12002;
-    background: $color-11;
-    animation: animationModal 1s both ease !important;
+    background: lighten($site-color-12, 20%);
+    animation: animationModal 0.5s both ease !important;
   }
 
   .modalGallery {
     position: absolute;
     outline: none;
     z-index: 12001;
-    background: $color-21;
-    border: 0.5px solid $color-22;
+    background: $site-color-4;
+    border: 1px solid $site-color-5;
     border-radius: 5px;
     top: 15px;
     left: 15px;
@@ -316,10 +365,9 @@ body {
       padding: 0 12px;
       line-height: 35px;
       text-align: center;
-      outline: none;
-      background: $color-7;
-      border: 1px solid $color-22;
-      border-radius: 5px;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
+      border-radius: 4px;
       transition: all 0.25s ease-in-out;
       color: $color-8;
       cursor: pointer;
@@ -328,14 +376,13 @@ body {
       &:hover,
       &:focus,
       &:active {
-        outline: none;
-        background: $color-21;
+        background: $site-color-1;
       }
     }
 
     .galleryBackground {
-      background: $color-7;
-      border: 1px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       width: 100%;
       max-width: 90%;
@@ -358,8 +405,8 @@ body {
       max-width: 90%;
       margin: 15px auto 0 auto;
       height: auto;
-      background: $color-7;
-      border: 1px solid $color-22;
+      background: $site-color-12;
+      border: 1px solid $site-color-5;
       border-radius: 5px;
       padding: 15px;
 
@@ -382,13 +429,13 @@ body {
             height: 24px;
             font-size: 14px;
             font-weight: 400;
-            color: $color-3;
+            color: $site-color-2;
             font-family: $fontCustom2;
             margin-bottom: 5px;
             padding-left: 10px;
             border-width: 1px;
             border-bottom-style: solid;
-            border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-13, rgba(0, 0, 0, 0)) 1 0;
+            border-image: linear-gradient(to right, $site-color-2, $site-color-2, rgba(0, 0, 0, 0)) 1 0;
           }
 
           .liUser {
@@ -412,7 +459,7 @@ body {
               height: 24px;
               font-size: 14px;
               font-weight: 400;
-              color: $color-3;
+              color: $site-color-2;
               margin-left: 5px;
               font-family: $fontCustom2;
             }
@@ -430,21 +477,23 @@ body {
         .titleNameImageList {
           font-weight: 400;
           font-size: 18px;
+          font-family: $fontCustom2;
           min-height: 32px;
           height: auto;
           text-align: center;
           line-height: 32px;
           width: 100%;
           padding-left: 25px;
-          color: $color-3;
+          color: $site-color-2;
           margin: 0 auto 0 auto;
         }
 
         .textParagraph {
-          text-indent: 15px;
+          text-indent: 16px;
           font-weight: 400;
-          font-size: 14px;
-          color: $color-3;
+          font-size: 13px;
+          color: $site-color-2;
+          font-family: $fontCustom2;
           line-height: 1.25;
         }
 
@@ -456,13 +505,14 @@ body {
           margin-top: 8px;
 
           .oneTag {
+            font-size: 11px;
             margin: 2px 4px;
-            font-size: 12px;
+            font-family: $fontCustom2;
+            border-radius: 4px;
             height: 20px;
             line-height: 20px;
-            border-radius: 4px;
-            color: darken($color-3, 50%);
-            background: $color-22;
+            color: darken($site-color-2, 50%);
+            background: lighten($site-color-12, 20%);
             padding: 0 8px;
           }
         }
